update package.json based on yarsk

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,57 @@
 {
-  "name": "portfolio-frontend",
+  "name": "yarsk-palmerev",
   "version": "1.0.0",
-  "description": "frontend for my portfolio site",
-  "main": "index.js",
+  "description": "My React boilerplate. Based on bradleyboy/yarsk.",
+  "main": "./index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:js": "eslint ./src ./conf ./build-gh-pages.js",
+    "test": "mocha --compilers js:babel-core/register ./src/components/**/*.test.js",
+    "start": "webpack-dev-server --config conf/webpack.config.js --hot --progress --colors --content-base ./build",
+    "build": "cross-env NODE_ENV=production webpack --config conf/webpack.production.js",
+    "build:gh": "npm run build && node ./build-gh-pages.js && rm -r ./dist"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/palmerev/portfolio-site.git"
-  },
-  "author": "Evan Palmer",
+  "author": "Evan Palmer <evjpalmer@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/palmerev/portfolio-site/issues"
-  },
-  "homepage": "https://github.com/palmerev/portfolio-site#readme",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
+    "eslint-plugin-import": "^1.10.2",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.5.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.1",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.8",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-transform-react-constant-elements": "^6.4.0",
+    "babel-plugin-transform-react-inline-elements": "^6.4.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.1.0",
+    "babel-preset-stage-0": "^6.3.13",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "eslint": "^2.13.1",
-    "eslint-plugin-import": "^1.9.2",
-    "eslint-plugin-react": "^5.2.2",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-router": "^2.5.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
+    "enzyme": "^2.2.0",
+    "eslint": "^2.8.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-config-standard-jsx": "^1.1.0",
+    "eslint-config-standard-react": "^2.2.0",
+    "eslint-loader": "^1.2.1",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-react": "^3.16.1",
+    "eslint-plugin-standard": "^1.3.2",
+    "expect": "^1.20.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "gh-pages": "^0.9.0",
+    "html-webpack-plugin": "^2.8.1",
+    "mocha": "^2.4.5",
+    "postcss-loader": "^0.8.0",
+    "react-addons-test-utils": "^15.0.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
 }
