--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "html-webpack-plugin": "^2.8.1",
     "mocha": "^2.4.5",
     "postcss-loader": "^0.8.0",
+    "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.0.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
